Add copyright information to the QR Scout

--- a/src/main/resources/qrscout/index.html
+++ b/src/main/resources/qrscout/index.html
@@ -17,6 +17,19 @@
       <button id="reset" type="reset">Reset Form</button>
     </div>
   </form>
+  <div id="copyright">
+<!--
+    PLEASE LEAVE THIS COPYRIGHT NOTCE IN PLACE if you wish to customize this
+    software. Even better, please consider contributing to the development
+    of this software by getting involved with our GitHub project hosted here:
+
+    https://github.com/koibots8230/qr-scout-hub-java
+ -->
+    This software is Copyright &copy; 2025 - 2026 FRC Team 8230, KoiBots<br/>
+    It is distributed under the terms of the <a href="https://github.com/koibots8230/qr-scout-hub-java/blob/main/LICENSE">MIT License</a>.<br/>
+    Based upon QR Scout from Red Hawk Robotics FRC 2713.<br/>
+    You may wish to use QR Scout with our <a href="https://github.com/koibots8230/qr-scout-hub-java">QR Scout Hub</a> software.
+  </div>
   <!-- A hidden pop-up for showing QR codes -->
   <div id="qr-popup" class="modal" style="display:none;">
     <div class="modal-content">
