--- a/src/main/resources/qrscout/index.html
+++ b/src/main/resources/qrscout/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title id="title"></title>
+  <title id="title">QR Scout</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="custom.css" />
   <link rel="icon" type="image/png" href="koibots-logo.png">
