Add link-following in help navigator

--- a/src/main/resources/help/help.html
+++ b/src/main/resources/help/help.html
@@ -10,7 +10,13 @@ body {
 <body>
 <h1>QR Scout Hub</h1>
 
-<h2>Introduction</h2>
+
+<ol>
+  <li><a href="#introduction">Introduction</a></li>
+  <li><a href="#credits">Credits and Acknowledgments</a>
+</ol>
+
+<h2 id="introduction">Introduction</h2>
 
 <p>
   QR Scout Hub is a program to manage scouting efforts for
@@ -36,7 +42,7 @@ body {
   files accompanying this program.
 </p>
 
-<h2>Credits and Acknowledgments</h2>
+<h2 id="credits">Credits and Acknowledgments</h2>
 <p>
   This software is Copyright &copy; 2025-2026 FRC 8230, KoiBots.
 </p>
