Ensure that the QR EC slider isn't interpreted as a game field

--- a/src/main/resources/qrscout/index.html
+++ b/src/main/resources/qrscout/index.html
@@ -41,7 +41,7 @@
           <div id="qr-container"></div>
           <img id="qr-logo" src="koibots-logo.png" alt="Logo">
         </div>
-        <div class="field">
+        <div class="ec-field">
           <h3>Error correction</h3>
 
           <input
