--- a/src/main/resources/help/help.html
+++ b/src/main/resources/help/help.html
@@ -104,7 +104,7 @@ ol ol {
   are final and cannot be undone.
 </p>
 
-<h3 id="howto_analyzing">Building and Running Analytics</h3>
+<h3 id="howto_analytics">Building and Running Analytics</h3>
 <p>
   One of the most powerful features of QR Scout is the ability to perform
   analytics on your scouting data right from within the QR Scout Hub
